{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 13,
  "lineage": "9a6dcb06-c8d8-e670-7a9a-481c548f96d9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "building_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cec3667c32f7419e",
            "arn": "arn:aws:ec2:us-east-1:236505274825:elastic-ip/eipalloc-0cec3667c32f7419e",
            "domain": "vpc",
            "id": "eipalloc-0cec3667c32f7419e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-216-57-182.compute-1.amazonaws.com",
            "public_ip": "44.216.57.182",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "building_eip"
            },
            "tags_all": {
              "Name": "building_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "building_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:236505274825:instance/i-099c047b14799fc71",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-099c047b14799fc71",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0cc63f08e21693cbc"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cc63f08e21693cbc",
            "private_dns": "ip-10-0-100-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.100.50",
            "public_ip": "3.84.46.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-036ee52b1bc5e2f25",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f8f68b6af1a2ef9",
            "tags": {
              "Name": "buildindg_web"
            },
            "tags_all": {
              "Name": "buildindg_web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a49f657e1cf8ccf6"
            ]
          },
          "dependencies": [
            "aws_network_interface.building_instance_interface",
            "aws_security_group.building_security_group",
            "aws_subnet.public_building_subnet",
            "aws_vpc.building_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "building_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236505274825:internet-gateway/igw-00216b946ca3eb902",
            "id": "igw-00216b946ca3eb902",
            "owner_id": "236505274825",
            "tags": {
              "Name": "Internet_gateway_building"
            },
            "tags_all": {
              "Name": "Internet_gateway_building"
            },
            "vpc_id": "vpc-06a24f34c6aff497e"
          },
          "dependencies": [
            "aws_vpc.building_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "building-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cec3667c32f7419e",
            "association_id": "eipassoc-0e87d514aa930d541",
            "connectivity_type": "public",
            "id": "nat-0875d02ec34afe598",
            "network_interface_id": "eni-05733f26714ff838f",
            "private_ip": "10.0.100.145",
            "public_ip": "44.216.57.182",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07f8f68b6af1a2ef9",
            "tags": {
              "Name": "building-nat"
            },
            "tags_all": {
              "Name": "building-nat"
            }
          },
          "dependencies": [
            "aws_eip.building_eip",
            "aws_internet_gateway.building_gateway",
            "aws_subnet.public_building_subnet",
            "aws_vpc.building_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "building_instance_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236505274825:network-interface/eni-0cc63f08e21693cbc",
            "id": "eni-0cc63f08e21693cbc",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:e4:c9:24:a0:d1",
            "owner_id": "236505274825",
            "private_ip": "10.0.100.50",
            "private_ip_list": [
              "10.0.100.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.100.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a49f657e1cf8ccf6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f8f68b6af1a2ef9"
          },
          "dependencies": [
            "aws_security_group.building_security_group",
            "aws_subnet.public_building_subnet",
            "aws_vpc.building_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "building_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236505274825:route-table/rtb-0c46a99f7d0081eaf",
            "id": "rtb-0c46a99f7d0081eaf",
            "owner_id": "236505274825",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00216b946ca3eb902",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "building_route_table"
            },
            "tags_all": {
              "Name": "building_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a24f34c6aff497e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.building_gateway",
            "aws_vpc.building_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "building_associte_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdc15643bbb05919",
            "route_table_id": "rtb-0c46a99f7d0081eaf",
            "subnet_id": "subnet-07f8f68b6af1a2ef9"
          },
          "dependencies": [
            "aws_internet_gateway.building_gateway",
            "aws_route_table.building_route_table",
            "aws_subnet.public_building_subnet",
            "aws_vpc.building_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "building_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236505274825:security-group/sg-0a49f657e1cf8ccf6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0a49f657e1cf8ccf6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20241103230310015300000001",
            "name_prefix": "terraform-",
            "owner_id": "236505274825",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "building_permitir_http_ssh"
            },
            "tags_all": {
              "Name": "building_permitir_http_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a24f34c6aff497e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.building_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_building_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236505274825:subnet/subnet-0e2cfec4cf918e8ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2cfec4cf918e8ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "236505274825",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_building_Subnet"
            },
            "tags_all": {
              "Name": "private_building_Subnet"
            },
            "vpc_id": "vpc-06a24f34c6aff497e"
          },
          "dependencies": [
            "aws_vpc.building_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_building_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236505274825:subnet/subnet-07f8f68b6af1a2ef9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f8f68b6af1a2ef9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "236505274825",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_building_subnet"
            },
            "tags_all": {
              "Name": "public_building_subnet"
            },
            "vpc_id": "vpc-06a24f34c6aff497e"
          },
          "dependencies": [
            "aws_vpc.building_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "building_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236505274825:vpc/vpc-06a24f34c6aff497e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d504f519ecbacda7",
            "default_route_table_id": "rtb-0d4cbac232e0250ac",
            "default_security_group_id": "sg-035e85f4b13abfbcd",
            "dhcp_options_id": "dopt-063a5202305499d9a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06a24f34c6aff497e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d4cbac232e0250ac",
            "owner_id": "236505274825",
            "tags": {
              "Name": "building_vpc"
            },
            "tags_all": {
              "Name": "building_vpc"
            }
          }
        }
      ]
    }
  ]
}